--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "lodash": "^4.17.21",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.0",
     "morgan": "^1.10.0"
   }
 }
